fix tiles overlapping header

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -18,6 +18,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 1;
 }
 
 .body-content {
